--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "lucide-react": "^0.575.0",
-    "framer-motion": "^12.34.3",
-    "gsap": "3.12.5"
+    "framer-motion": "^12.34.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
